src/objects/SPE2_Survey_Question_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PI_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PI Data</label>
        <referenceTo>SPE_PIDefinition__c</referenceTo>
        <relationshipLabel>SPE2 Survey Question Mapping</relationshipLabel>
        <relationshipName>SPE2_Survey_Question_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Bank__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Bank</label>
        <referenceTo>SPE_SurveyQuestion__c</referenceTo>
        <relationshipLabel>SPE2 Survey Question Mapping</relationshipLabel>
        <relationshipName>SPE2_Survey_Question_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SPE2 Survey Question Mapping</relationshipLabel>
        <relationshipName>SPE2_Survey_Question_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>SPE2 Survey Question Mapping</relationshipLabel>
        <relationshipName>SPE2_Survey_Question_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ordernumber__c</fullName>
        <label>ordernumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SPE2 Survey Question Mapping</label>
    <nameField>
        <displayFormat>SQM-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE2 Survey Question Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>